--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "src/server.ts",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
+    "build": "npm install @types/multer @types/express @types/cors && tsc",
     "start": "node dist/server.js",
     "migrate": "prisma migrate deploy",
     "studio": "prisma studio"
@@ -21,6 +21,7 @@
     "typescript": "^5.3.3",
     "@types/node": "^20.11.4",
     "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "@types/multer": "^1.4.11"
   }
 }
