--- a/render.yaml
+++ b/render.yaml
@@ -3,20 +3,8 @@ services:
     name: calendario-backend
     env: node
     plan: free
-    buildCommand: npm install
-    startCommand: npm run start
+    buildCommand: npm install && npm run build
+    startCommand: npm run migrate && npm run start
     envVars:
-      - key: DATABASE_URL
-        sync: false
       - key: NODE_VERSION
         value: 18
-
-  - type: pserv
-    name: calendario-db
-    env: postgresql
-    plan: free
-    diskSizeGB: 10
-   DatabaseURL:
-      fromService:
-        name: calendario-backend
-        property: DATABASE_URL
