--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     buildCommand: npm install && npm run build
-    startCommand: npm run migrate && npm run start
+    startCommand: npm run migrate:deploy && npm run start
     envVars:
       - key: NODE_VERSION
         value: 18
