--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://localhost:5432/calendario_db
+DATABASE_URL=postgresql://postgres:Lucky010220Kiana@db.hjaoqfvrrkqywxooevlb.supabase.co:5432/postgres
 PORT=3000
