--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,7 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "migrate:deploy": "prisma migrate deploy",
-    "migrate:dev": "prisma migrate dev --name init"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
