--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "tsx src/server.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
@@ -14,11 +14,11 @@
     "multer": "^1.4.5-lts.1",
     "@types/multer": "^1.4.11",
     "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "tsx": "^4.7.1"
   },
   "devDependencies": {
     "prisma": "^5.10.0",
-    "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "@types/node": "^20.11.4"
   }
