--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,12 @@
 {
   "name": "calendario-backend",
   "version": "1.0.0",
-  "main": "src/server.ts",
+  "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "tsx src/server.ts"
+    "postinstall": "npm run build",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
@@ -15,11 +16,11 @@
     "@types/multer": "^1.4.11",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
-    "tsx": "^4.7.1"
+    "typescript": "^5.3.3",
+    "@types/node": "^20.11.4"
   },
   "devDependencies": {
     "prisma": "^5.10.0",
-    "typescript": "^5.3.3",
-    "@types/node": "^20.11.4"
+    "tsx": "^4.7.1"
   }
 }
