--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "postinstall": "npm run build",
+    "postinstall": "prisma generate && npm run build",
     "start": "node dist/server.js"
   },
   "dependencies": {
@@ -17,10 +17,7 @@
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "typescript": "^5.3.3",
-    "@types/node": "^20.11.4"
-  },
-  "devDependencies": {
-    "prisma": "^5.10.0",
-    "tsx": "^4.7.1"
+    "@types/node": "^20.11.4",
+    "prisma": "^5.10.0"
   }
 }
