--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,7 @@
 {
-  "name": "calendario-backend",
-  "version": "1.0.0",
-  "main": "dist/server.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "build": "tsc",
-    "postinstall": "prisma generate && npm run build",
-    "start": "node dist/server.js"
+    "postinstall": "prisma generate",
+    "start": "tsx src/server.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
@@ -16,8 +11,6 @@
     "@types/multer": "^1.4.11",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
-    "typescript": "^5.3.3",
-    "@types/node": "^20.11.4",
-    "prisma": "^5.10.0"
+    "tsx": "^4.7.1"
   }
 }
