--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,10 @@
 {
+  "name": "calendario-backend",
+  "version": "1.0.0",
+  "main": "src/server.ts",
   "scripts": {
-    "postinstall": "prisma generate",
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc",
     "start": "tsx src/server.ts"
   },
   "dependencies": {
