--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,14 @@
 {
   "name": "calendario-backend",
   "version": "1.0.0",
-  "main": "dist/server.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "npx tsx src/server.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1",
-    "@types/multer": "^1.4.11",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17"
-  },
-  "devDependencies": {
-    "tsx": "^4.7.1",
-    "typescript": "^5.3.3",
-    "@types/node": "^20.11.4"
+    "tsx": "^4.7.1"
   }
 }
