--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,14 @@
 {
   "name": "calendario-backend",
   "version": "1.0.0",
+  "main": "src/server.js",
   "scripts": {
-    "start": "npx tsx src/server.ts"
+    "dev": "node src/server.js",
+    "start": "node src/server.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "tsx": "^4.7.1"
+    "multer": "^1.4.5-lts.1"
   }
 }
